RESOLVED FIXED19344
Regression: Shadow offsets seem to have changed in 10.5.3 in canvas
https://bugs.webkit.org/show_bug.cgi?id=19344
Summary Regression: Shadow offsets seem to have changed in 10.5.3 in canvas
Francisco Tolmasky
Reported 2008-05-31 01:43:09 PDT
Having a shadow offset of 1.0,1.0 doesn't seem to produce a shadow anymore (see below). Adding 0.01 to the shadow offsets appears to provide consistent results however. <canvas width="100" height="100" id="c" style="background: lime"></canvas> <script> window.onload = function () { var ctx = document.getElementById('c').getContext('2d'); // ctx.globalCompositeOperation = 'xor'; ctx.shadowColor = 'black'; ctx.shadowBlur = 1.0; ctx.shadowOffsetX = 1.0; ctx.shadowOffsetY = 1.0; ctx.fillStyle = '#f00'; ctx.fillRect(10, 10, 20, 20); } </script>
Attachments
Account for changes in CoreGraphics shadow behavior; fix recent Y-axis-direction regression (17.75 KB, patch)
2008-05-31 16:16 PDT, mitz
darin: review+
mitz
Comment 1 2008-05-31 11:09:14 PDT
CanvasRenderingContext2D::applyShadow() needs to have the same extraShadowOffset logic GraphicsContext::setPlatformShadow() has in GraphicsContextCG.cpp to guarantee consistent results.
mitz
Comment 2 2008-05-31 12:18:16 PDT
I have a patch but I cannot generate test results because DRT crashes on every test.
Mark Rowe (bdash)
Comment 3 2008-05-31 16:12:43 PDT
mitz
Comment 4 2008-05-31 16:16:14 PDT
Created attachment 21452 [details] Account for changes in CoreGraphics shadow behavior; fix recent Y-axis-direction regression The test covers both fixes.
Mark Rowe (bdash)
Comment 5 2008-05-31 17:24:26 PDT
Does SVG have some form of shadows that may require a similar fix?
Darin Adler
Comment 6 2008-06-01 12:31:25 PDT
Comment on attachment 21452 [details] Account for changes in CoreGraphics shadow behavior; fix recent Y-axis-direction regression r=me
mitz
Comment 7 2008-06-01 12:47:47 PDT
mitz
Comment 8 2008-06-02 11:40:12 PDT
(In reply to comment #5) > Does SVG have some form of shadows that may require a similar fix? No, but looking for calls to CGContextSetShadow* I just realized that canvas has many more which may need to be patched as well.
mitz
Comment 9 2008-06-02 13:01:57 PDT
Additional related fixes landed in <http://trac.webkit.org/changeset/34317>.
Note You need to log in before you can comment on or make changes to this bug.