WebCore:

Reviewed by Darin Adler.

        - fix https://bugs.webkit.org/show_bug.cgi?id=19344
          Regression: Shadow offsets seem to have changed in 10.5.3 in canvas

        Test: fast/canvas/shadow-offset.html

        * html/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::applyShadow): Slightly increase the
        magnitude of the offsets passed to CGContextSetShadow* to ensure that
        the end result after truncation is the desired integer offsets. This is
        the same workaround for <rdar://problem/5539388> that is used in
        GraphicsContext::setShadow(). Also correct a recent regression where
        shadow Y offsets were flipped.

LayoutTests:

        Reviewed by Darin Adler.

        - test for https://bugs.webkit.org/show_bug.cgi?id=19344
          Regression: Shadow offsets seem to have changed in 10.5.3 in canvas

        * fast/canvas/shadow-offset.html: Added.
        * platform/mac/fast/canvas/shadow-offset-expected.checksum: Added.
        * platform/mac/fast/canvas/shadow-offset-expected.png: Added.
        * platform/mac/fast/canvas/shadow-offset-expected.txt: Added.



Canonical link: https://commits.webkit.org/26746@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34287 268f45cc-cd09-0410-ab3c-d52691b4dbfc