third_party/WebKit/LayoutTests/fast/canvas/resources/shadow-offset.js
@@ -1,10 +1,11 @@
 FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
-<!DOCTYPE HTML>
-<p>There should be no red pixels below.</p>
-<p><canvas width="400" height="400" id="c" style="background: white;"></canvas></p>
-<script>
-window.onload = function () {
-    var ctx = document.getElementById('c').getContext('2d');
+test = function(setter) {
+    document.body.appendChild(document.createElement("p")).appendChild(document.createTextNode("There should be no red pixels below."));
+    var canvas = document.body.appendChild(document.createElement("canvas"));
+    canvas.width = "400";
+    canvas.height = "400";
+    canvas.style.backgroundColor = "white";
+    var ctx = canvas.getContext('2d');
     var w = 10;
     var h = 10;
 
@@ -12,16 +13,12 @@ window.onload = function () {
     for (var offsetY = -10; offsetY <= 10; offsetY++) {
         var x = 10;
         for (var offsetX = -10; offsetX <= 10; offsetX++) {
-            ctx.shadowColor = 'transparent';
-            ctx.shadowOffsetX = 0;
-            ctx.shadowOffsetY = 0;
+            ctx.setShadow(0, 0, 0, "transparent");
         
             ctx.fillStyle = 'red';
             ctx.fillRect(x + offsetX, y + offsetY, w, h);
     
-            ctx.shadowColor = 'green';
-            ctx.shadowOffsetX = offsetX;
-            ctx.shadowOffsetY = offsetY;
+            setter(ctx, offsetX, offsetY);
         
             ctx.fillStyle = 'white';
             ctx.fillRect(x, y, w, h);
@@ -31,4 +28,3 @@ window.onload = function () {
         y += h + Math.abs(offsetY) + 2;
     }
 }
-</script>
